package jp.co.systena.tigerscave.ShoppingApp;


public abstract class Actor {
  public abstract boolean play();
}
