package jp.co.systena.tigerscave.ShoppingApp;

public abstract class Game {
  public abstract void initGame();

  public abstract String endGame();
}
