package jp.co.systena.tigerscave.ShoppingApp.HighAndLow;

import jp.co.systena.tigerscave.ShoppingApp.Actor;

public class HighAndLowActor extends Actor {


  @Override
  public boolean play() {
    return false;
  }

}
